# clipforge

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE_TASK.md  IMPROVEMENTS_REPORT.md  INTEGRATION_GUIDE_2C.md  NEXT_STEPS_AFTER_v1.2.0.md  OPTIMIZATION_GUIDE.md  QUICKSTART_2026_04_16.md  README.md  README_SESSION_2026_04_16.md  RELEASE_NOTES_v1.2.0.md  ROADMAP.md  SESSION_STATUS_2026_04_16.md  install.bat  install.sh  pyproject.toml  requirements.txt  setup.cfg  test_patch.txt  uninstall.sh
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/images/: placeholder.txt
assets/logo/: placeholder.txt
assets/music/: placeholder.txt
data/: platforms.json  presets.json  styles.json  voices.json
data/templates/: ai_content.json  business.json  educational.json  motivation.json
docs/: ai.md  analytics.md  changelog.md  config.md  contributing.md  developer.md  extensions.md  faq.md  features.md  ffmpeg_renderer.md  install.md  optimization.md  presets.md  publish.md  publish_prep.md  release_notes_template.md  roadmap.md  troubleshooting.md  usage.md  workflows.md
examples/: README.md  batch_example.json  config_example.json  profile_example.json  script_ai_example.txt  script_example.txt
src/autovideo/: __init__.py  audio_engine.py  batch_runner.py  builder.py  cli.py  config_loader.py  constants.py  presets.py  scene_planner.py  script_parser.py  social_pack.py  text_engine.py  utils.py
src/autovideo/ai/: __init__.py
src/autovideo/cli/: __init__.py  batch.py  doctor.py  export_bundle.py  init_batch.py  init_config.py  init_profile.py  make.py  presets.py  scenes.py  social_pack.py  studio.py  thumbnail.py  wizard.py
src/clipforge/: __init__.py  analytics_optimizer.py  audio_engine.py  batch_runner.py  builder.py  cli.py  color_grader.py  config_loader.py  constants.py  duration_optimizer.py  ffmpeg_renderer.py  gpu_accelerator.py  media_fetcher.py  media_ranker.py  presets.py  profile.py  project.py  publish_config.py  publish_format.py  publish_manifest.py  publish_queue.py  qa_engine.py  quality_tiers.py  scene_planner.py  script_parser.py  social_pack.py  subtitle_engine.py  templates.py  text_engine.py  transitions.py  tts_engine.py  utils.py
src/clipforge/ai/: __init__.py  base.py  cache.py  factory.py  prompts.py
src/clipforge/ai/providers/: __init__.py  anthropic_provider.py  gemini_provider.py  openai_provider.py
src/clipforge/analytics/: __init__.py  aggregator.py  collector.py  factory.py  models.py  storage.py
src/clipforge/analytics/providers/: __init__.py  reels.py  tiktok.py  youtube.py
src/clipforge/commands/: __init__.py  analytics.py  batch.py  doctor.py  export_bundle.py  init_batch.py  init_config.py  init_profile.py  make.py  optimize.py  presets.py  project.py  publish.py  publish_manifest.py  queue.py  scenes.py  social_pack.py  studio.py  templates.py  thumbnail.py  wizard.py
src/clipforge/optimize/: __init__.py  engine.py  models.py
src/clipforge/providers/: __init__.py
src/clipforge/providers/publish/: __init__.py  base.py  factory.py  manual_provider.py  youtube_provider.py
src/clipforge/providers/stock/: __init__.py  base.py
src/clipforge/providers/tts/: __init__.py  base.py
tests/: conftest.py  test_analytics_aggregator.py  test_analytics_collector.py  test_analytics_models.py  test_analytics_storage.py  test_audio_engine.py  test_batch_runner.py  test_builder.py  test_cli.py  test_config_loader.py  test_ffmpeg_renderer.py  test_gpu_accelerator.py  test_media_fetcher.py  test_optimization.py  test_optimize_engine.py  test_optimize_models.py  test_premium_features.py  test_profile.py  test_project.py  test_providers.py  test_publish_format.py  test_publish_manifest.py  test_publish_manifest_v5.py  test_publish_providers_v5.py  test_publish_queue.py  test_quality_tiers.py  test_scene_planner.py  test_script_parser.py  test_social_pack.py  test_templates.py  test_text_engine.py  test_utils.py
