[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipforge"
version = "0.1.0"
description = "CLI tool to turn text scripts into short videos for YouTube Shorts, Reels, and TikTok."
authors = [{name = "ClipForge", email = "hello@clipforge.dev"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["video", "cli", "shorts", "reels", "tiktok", "ffmpeg"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0",
    "python-dotenv>=1.0",
    "requests>=2.28",
    "rich>=13.0",
    "Pillow>=9.0",
]

[project.optional-dependencies]
video = [
    "moviepy>=1.0.3",
]
tts = [
    "pyttsx3>=2.90",
]
ai = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "google-generativeai>=0.4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "click>=8.0",
    "python-dotenv>=1.0",
    "requests>=2.28",
    "rich>=13.0",
    "Pillow>=9.0",
]

[project.scripts]
clipforge = "clipforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clipforge = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
